--- a/frontend/src/styles/keymap.scss
+++ b/frontend/src/styles/keymap.scss
@@ -5,13 +5,34 @@
   white-space: nowrap;
   // height: 140px;
   gap: 0.25rem;
+  &.gap125 {
+    gap: 0.3125rem;
+  }
+  &.gap150 {
+    gap: 0.375rem;
+  }
+  &.gap200 {
+    gap: 0.5rem;
+  }
   margin-top: 1rem;
   -webkit-user-select: none;
   user-select: none;
 
   .row {
-    height: 2rem;
     gap: 0.25rem;
+    height: 2rem;
+    &.row125 {
+      height: 2.5rem;
+      gap: 0.3125rem;
+    }
+    &.row150 {
+      height: 3rem;
+      gap: 0.375rem;
+    }
+    &.row200 {
+      height: 4rem;
+      gap: 0.4375rem;
+    }
   }
 
   .keymapKey {
@@ -24,8 +45,26 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-    width: 2rem;
     height: 2rem;
+    width: 2rem;
+    &.key125 {
+      height: 2.5rem;
+      width: 2.5rem;
+      font-size: 1.25rem;
+      --roundness: 0.625rem;
+    }
+    &.key150 {
+      height: 3rem;
+      width: 3rem;
+      font-size: 1.5rem;
+      --roundness: 0.75rem;
+    }
+    &.key200 {
+      height: 4rem;
+      width: 4rem;
+      font-size: 2rem;
+      --roundness: 0.875rem;
+    }
     position: relative;
 
     .bump {
@@ -53,6 +92,16 @@
       &:hover {
         cursor: pointer;
         color: var(--main-color);
+      }
+      font-size: 0.5rem;
+      &.space125 {
+        font-size: 0.625rem;
+      }
+      &.space150 {
+        font-size: 0.75rem;
+      }
+      &.space200 {
+        font-size: 1rem;
       }
     }
 
@@ -85,6 +134,15 @@
   .r2 {
     display: grid;
     grid-template-columns: 0.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1rem;
+    &.rowTwo125 {
+      grid-template-columns: 0.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1.25rem;
+    }
+    &.rowTwo150 {
+      grid-template-columns: 0.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1.5rem;
+    }
+    &.rowTwo200 {
+      grid-template-columns: 0.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 2rem;
+    }
   }
 
   .r3 {
